Rename fix and collapse buttons, update Navbar component
Renamed `FixedButton` to `ToggleFixButton` and `CollapsedButton` to `ToggleCollapseButton`. Updated corresponding imports, usage, and styling in `NavbarDesktopV2` and other affected files. Switched export of `NavbarMainV3` to `NavbarMain` in the Navbar index file.

--- a/frontend-next-migration/src/widgets/Navbar/ui/ToggleFixButton/ToggleFixButton.module.scss
+++ b/frontend-next-migration/src/widgets/Navbar/ui/ToggleFixButton/ToggleFixButton.module.scss
@@ -1,4 +1,4 @@
-.fixedButton{
+.ToggleFixButton{
   box-shadow: 0 0 0 4px var(--inverted-primary-color);
   transform: scale(70%);
   min-width: 40px;
